fix cloud behind text

--- a/wp-content/themes/portfolio/resources/css/general/single-project.scss
+++ b/wp-content/themes/portfolio/resources/css/general/single-project.scss
@@ -21,7 +21,10 @@
   }
 
   .rightCloud {
-    right: 0;
+    right: -10rem;
+    @include tablet-up{
+      right: 0;
+    }
   }
 
   &_head {
